--- a/css/stil.css
+++ b/css/stil.css
@@ -130,7 +130,7 @@ form {
       background:#6C5B7B ;
   }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 670px) {
     nav a {
       float: none;
       display: block;
@@ -144,6 +144,25 @@ form {
         justify-content: space-around;
     }
 
+    #formLoto{
+
+        width: 100% ;
+    
+    }
+
+    #formLoto input{
+        text-align: left;
+        font-size: 12px;
+        padding: none;
+        width: 100%;
+    }
+
+   #plansa {
+        width: 100%;
+       
+        
+    }
+    
     
 }
 
@@ -167,3 +186,60 @@ form {
     text-emphasis: none;
 }
 
+#meniuaside {
+
+    text-align: center;
+    
+}
+
+#s2 button, #s4 button{
+    background-image: linear-gradient(#163957, #C06C84);
+    color: #F8B195;
+    border-color: #F8B195;
+    font-size: 16px;
+}
+
+#numereLoto{
+    font-size: 20px;
+    text-align: left;
+}
+
+#formLoto input{
+    width: 10%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    text-align: left;
+}
+
+section :not(h2) {
+    text-align: center;
+}
+
+#numereNimerite {
+    font-size: 25px;
+}
+
+#s3 div, #s4 div{
+    text-align: left; 
+}
+
+canvas {
+    border: 1px solid #000000;
+    background-color: white;
+}
+
+#s4 table, th, td {
+
+    border: 1px solid #6C5B7B;
+    padding: 2px;
+    text-align: center;
+}
+
+#s4 tr:hover{
+    background-color: initial;
+}
+
+#poz:focus, #culoareCelula:focus {
+    width: 30%;
+}
