--- a/continut/css/stil.css
+++ b/continut/css/stil.css
@@ -162,6 +162,11 @@ form {
        
         
     }
+
+    div.s14 #s1, div.s14 #s2, div.s14 #s3, div.s14 #s4{
+        width: 100%;
+       
+    }
     
     
 }
@@ -244,3 +249,60 @@ canvas {
     width: 30%;
 }
 
+#s1, #s2, #s3, #s4
+{
+    border-width: 3px;
+    border-style: double;
+    border-color: #6C5B7B;
+    border-radius: 5px;
+
+}
+
+
+.s41
+{
+    display: block;
+}
+
+.s14:after, .s22:after
+{ 
+
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.s14 #s1, .s14 #s2, .s14 #s3, .s14 #s4
+{
+    float: left;
+    width: 22%;
+    padding: 10px;
+    text-align: center;
+
+    
+}
+
+
+
+.s14 #formLoto input {
+    width: 15%;
+    padding: 0px;
+    text-align: left;
+}
+
+.s14 canvas, .s22 canvas
+{
+    width: 100% !important;
+}
+
+div.s22{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: left;
+}
+
+.s22 #s1, .s22 #s2, .s22 #s3, .s22 #s4
+{
+   flex: 40%;
+}
